--- a/lab13.html
+++ b/lab13.html
@@ -36,14 +36,14 @@
 
             }
         }
-        let numero1=prompt("ingrese el primer numero: ");
-         let numero2=prompt("ingrese el segundo numero: ");
+        let numero1=parseFloat(prompt("ingrese el primer numero: "));
+         let numero2=parseFloat(prompt("ingrese el segundo numero: "));
           let operacion=prompt("ingrese ls operacion(semar, restar, multi,divi)");
 
           let resultado=calculadora(numero1,numero2,operacion);
 
           console.log("El resultado es: "+resultado);
-          document.write("El resultado es: ");
+          document.write("El resultado es: "+resultado);
 
 
 
