--- a/lab13.html
+++ b/lab13.html
@@ -38,7 +38,7 @@
         }
         let numero1=parseFloat(prompt("ingrese el primer numero: "));
          let numero2=parseFloat(prompt("ingrese el segundo numero: "));
-          let operacion=prompt("ingrese ls operacion(semar, restar, multi,divi)");
+          let operacion=prompt("ingrese ls operacion(sumar, restar, multi,divi)");
 
           let resultado=calculadora(numero1,numero2,operacion);
 
